tests/ui/public_fragment_boundary.rs
fn main() {
    let _ = core::mem::size_of::<hibana::runtime::program::Fragment<()>>();
}
